--- a/css/custom.css
+++ b/css/custom.css
@@ -1,12 +1,17 @@
+/*
 @media only screen and (min--moz-device-pixel-ratio: 1.5),
     (-o-min-device-pixel-ratio: 3/2),
     (-webkit-min-device-pixel-ratio: 1.5),
     (min-device-pixel-ratio: 1.5) {
 
   *{
-    font-size: 150%;
+    font-size: 120%;
   }
+ #item{
+   font-size: 90% !important;
 }
+*/
+/*
 @media only screen and (min--moz-device-pixel-ratio: 2),
     (-o-min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2.0),
@@ -34,3 +39,4 @@
   }
 
 }
+*/
